# Shell

./: .cursorrules  .oxlintrc.json  PROJECT_CONTEXT.md  ShellMars项目文档.md  TerminalMars项目文档.md  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  stats.html  tsconfig.json  vite.config.ts
.cache/oxlint/: report.html  report.json
scripts/: generate-lint-report.js  lint.js
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection_commands.rs  file_commands.rs  hardware_commands.rs  mod.rs  storage_commands.rs  terminal_commands.rs
src-tauri/src/models/: connection.rs  mod.rs  session.rs  settings.rs
src-tauri/src/services/: connection_storage.rs  file_service.rs  mod.rs  ssh_manager.rs  ssh_service copy.rs  ssh_service.rs  terminal_service.rs
src-tauri/src/services/ssh/: manager.rs  mod.rs  service.rs
src-tauri/src/services/ssh/modules/: command.rs  connection.rs  hardware.rs  mod.rs  parser.rs  tab_manager.rs
src-tauri/src/services/storage/: connection.rs  mod.rs
src-tauri/src/utils/: crypto.rs  error.rs  mod.rs  storage.rs
src/assets/styles/: index.scss
src/components/HardwareInformation/: CpuInfo.vue  DiskInfo.vue  GpuInfo.vue  MemoryInfo.vue  NetworkInfo.vue  index.vue
src/components/LinkList/: index.vue
src/components/connection/: ConnectionForm.vue  ConnectionList.vue  ConnectionStatus.vue  type.d.ts
src/pages/: IndexPage.vue
src/router/: index.ts
src/store/: index.ts
src/utils/: format.ts  formatData.ts  renderIcon.ts
(+41 files in other folders)
