[package]
name = "ShellMars"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shell_mars_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SSH相关
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# 存储相关
dirs = "5.0"
# 加密相关
aes-gcm = "0.10.3"
rand = "0.8"
pbkdf2 = "0.12"
sha2 = "0.10"
base64 = "0.21"
# 日志
log = "0.4"
env_logger = "0.10"
# 错误处理
thiserror = "1.0"
# 静态初始化
lazy_static = "1.4"
# 终端相关
futures = "0.3"
tokio-tungstenite = "0.20"

